(library
 (name mod_add)
 (modules mod_add)
 (libraries base hardcaml zarith)
 (preprocess (pps ppx_jane ppx_hardcaml)))

(executable
 (name test_mod_add)
 (modules test_mod_add)
 (public_name modadd)
 (package ecdsa)
 (libraries base hardcaml stdio zarith mod_add)
 (preprocess (pps ppx_jane ppx_hardcaml)))

(library
 (name mod_mul)
 (modules mod_mul)
 (libraries base hardcaml zarith)
 (preprocess (pps ppx_jane ppx_hardcaml)))

(executable
 (name test_mod_mul)
 (modules test_mod_mul)
 (libraries base hardcaml stdio zarith mod_mul)
 (preprocess (pps ppx_jane ppx_hardcaml)))

(library
 (name mod_inv)
 (modules mod_inv)
 (libraries base hardcaml zarith)
 (preprocess (pps ppx_jane ppx_hardcaml)))

(executable
 (name test_mod_inv)
 (modules test_mod_inv)
 (libraries base hardcaml stdio zarith mod_inv)
 (preprocess (pps ppx_jane ppx_hardcaml)))


(library
 (name arith)
 (modules arith)
 (libraries base hardcaml mod_add mod_mul mod_inv)
 (preprocess (pps ppx_hardcaml ppx_jane)))

(executable
 (name test_arith)
 (modules test_arith)
 (libraries base hardcaml arith stdio zarith)
 (preprocess (pps ppx_hardcaml ppx_jane)))

(library
 (name ecdsa)
 (modules ecdsa)
 (libraries base hardcaml zarith arith)
 (preprocess (pps ppx_jane ppx_hardcaml)))

 (library
 (name point_add)
 (modules point_add)
 (libraries base hardcaml zarith arith)
 (preprocess (pps ppx_jane ppx_hardcaml)))

 (library
 (name point_mul)
 (modules point_mul)
 (libraries base hardcaml zarith arith)
 (preprocess (pps ppx_jane ppx_hardcaml)))

  (executable
 (name test_point_mul)
 (modules test_point_mul)
 (libraries base hardcaml zarith arith point_mul)
 (preprocess (pps ppx_jane ppx_hardcaml)))

 (executable
 (name test_point_add)
 (modules test_point_add)
 (libraries base hardcaml zarith arith point_add)
 (preprocess (pps ppx_jane ppx_hardcaml)))


(executable
 (name test_ecdsa)
 (modules test_ecdsa)
 (libraries base hardcaml stdio zarith ecdsa)
 (preprocess (pps ppx_jane ppx_hardcaml)))





  (executable
 (name debug)
  (modules debug)
 (libraries base hardcaml zarith arith point_add point_mul)
 (preprocess (pps ppx_jane ppx_hardcaml)))